WIP: port verity 5.7.3 (1.20.1 Forge) to 1.21.1 NeoForge
- Decompile 5.7.3 and copy sources into project
- SRG m_/f_ remap to 1.21.1 official names (296/450 methods, 170/170 fields)
- Forge->NeoForge package remap (net.minecraftforge.* -> net.neoforged.*)
- Add YACL dep; conditional sherpa-onnx libs dep
- Sync remote bugfix 508bff5 AiAPI quality (SLF4J, shared HttpClient)